# perception_learning

./: .bazelrc  .gitignore  README.md  WORKSPACE
bindings/pydairlib/perceptive_locomotion/perception_learning/: BUILD.bazel  DrakeCassieEnv.py  DrakeGymEnv.py  alip_lqr_data_collection.py  alip_nn_lqr_test.py  run_sample.py  train.py  true_cost_system.py
bindings/pydairlib/perceptive_locomotion/perception_learning/inference/: BUILD.bazel  torch_utils.py  train_and_test.py
bindings/pydairlib/perceptive_locomotion/perception_learning/tmp/: a.py
bindings/pydairlib/perceptive_locomotion/systems/: BUILD.bazel  alip_lqr_cost_test.py  alip_lqr_rl.py  cassie_footstep_controller_gym_environment.py
rl/tmp/DrakeCassie/runs/test/PPO_1_reward1/: events.out.tfevents.1709754489.minkukim-Z390-UD.30105.0
rl/tmp/DrakeCassie/runs/test/PPO_1_rewardlqr_term/: events.out.tfevents.1709766825.minkukim-Z390-UD.34690.0
rl/tmp/DrakeCassie/runs/test/PPO_1best_vdes0.3/: events.out.tfevents.1710220892.minkukim-Z390-UD.41377.0
rl/tmp/DrakeCassie/runs/test/PPO_1mil_dves/: events.out.tfevents.1710162351.minkukim-Z390-UD.36696.0
rl/tmp/DrakeCassie/runs/test/PPO_1mil_plus1/: events.out.tfevents.1709881133.minkukim-Z390-UD.74346.0
wandb/: latest-run
wandb/offline-run-20240205_225524-5o334uaa/: run-5o334uaa.wandb
wandb/offline-run-20240205_225524-5o334uaa/files/: wandb-metadata.json
wandb/offline-run-20240205_225800-lo55lsxf/: run-lo55lsxf.wandb
wandb/offline-run-20240205_225800-lo55lsxf/files/: wandb-metadata.json
wandb/run-20240205_230304-vefk3yo9/: run-vefk3yo9.wandb
wandb/run-20240205_230304-vefk3yo9/files/: config.yaml
wandb/run-20240205_230333-mfpga6oa/: run-mfpga6oa.wandb
wandb/run-20240205_230333-mfpga6oa/files/: config.yaml
wandb/run-20240205_230436-r2p27s48/: run-r2p27s48.wandb
wandb/run-20240205_230436-r2p27s48/files/: config.yaml
wandb/run-20240205_230632-gj65d55w/: run-gj65d55w.wandb
wandb/run-20240205_230632-gj65d55w/files/: config.yaml
wandb/run-20240205_230921-0zg822j8/: run-0zg822j8.wandb
wandb/run-20240205_230921-0zg822j8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240209_005451-ww4cdrhq/: run-ww4cdrhq.wandb
wandb/run-20240209_005451-ww4cdrhq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240209_020335-cxgu7mnn/: run-cxgu7mnn.wandb
wandb/run-20240209_020335-cxgu7mnn/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240209_145530-2zemzwrp/: run-2zemzwrp.wandb
wandb/run-20240209_145530-2zemzwrp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
