# -*- python -*-
load("@drake//tools/install:install.bzl", "install")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_py_installs",
    "get_pybind_package_info",
    "pybind_py_library",
)


py_library(
    name = "terrain_utils",
    srcs = ["terrain_utils.py"],
    deps = [
        "//bindings/pydairlib/cassie:cassie_utils_py",
        "//bindings/pydairlib/geometry:convex_polygon_py",
        "//bindings/pydairlib/multibody",
        "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "alip_rl_data_collection",
    srcs = ["alip_rl_data_collection.py"],
    deps = [
        ":terrain_utils",
        "//bindings/pydairlib/perceptive_locomotion/systems:alip_lqr_rl",
        "//bindings/pydairlib/perceptive_locomotion/systems:cassie_footstep_controller_gym_environment",
    ],
)

py_library(
    name = "DrakeCassieEnv",
    srcs = ["DrakeCassieEnv.py"],
    deps = [
        ":terrain_utils",
        "//bindings/pydairlib/perceptive_locomotion/systems:alip_lqr_rl",
        "//bindings/pydairlib/perceptive_locomotion/systems:cassie_footstep_controller_gym_environment",
        "//bindings/pydairlib/perceptive_locomotion/perception_learning:DrakeGymEnv",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "DrakeGymEnv",
    srcs = ["DrakeGymEnv.py"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)

py_binary(
    name = "train",
    srcs = ["train.py"],
    deps = [
        "//bindings/pydairlib/perceptive_locomotion/systems:cassie_footstep_controller_gym_environment",
    	"//bindings/pydairlib/perceptive_locomotion/perception_learning:DrakeCassieEnv",
    ],
)

py_binary(
    name = "run_sample",
    srcs = ["run_sample.py"],
    deps = [
        "//bindings/pydairlib/perceptive_locomotion/systems:cassie_footstep_controller_gym_environment",
    	"//bindings/pydairlib/perceptive_locomotion/perception_learning:DrakeCassieEnv",
    ],
)


# This determines how `PYTHONPATH` is configured, and how to install the
# bindings.
PACKAGE_INFO = get_pybind_package_info("//bindings")

py_library(
    name = "module_py",
    srcs = [
        "__init__.py",
    ],
    imports = PACKAGE_INFO.py_imports,
    deps = [
        "//bindings/pydairlib:module_py",
    ],
)

PY_LIBRARIES = [
    ":terrain_utils",
    ":DrakeCassieEnv"
    ":DrakeGymEnv"
]

# Package roll-up (for Bazel dependencies).
py_library(
    name = "perception_learning",
    imports = PACKAGE_INFO.py_imports,
    deps = PY_LIBRARIES,
)
